# quick-suite-capstone

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: integration.yml  security.yml
docs/: deployment-guide.md  institutional-memory.md  kiro-integration.md  proactive-intelligence-roadmap.md  proactive-intelligence-science.md  quick-research-integration.md
docs/prompts/: advancement-officer.md  compliance-officer.md  faculty-researcher.md  ir-analyst.md  research-computing.md
docs/workflows/: morning-brief.yaml  recall-brief.yaml
examples/: README.md
examples/academic-research/: README.md
examples/academic-research/1000genomes-population-structure/: README.md  scenario.yaml
examples/academic-research/cdc-health-disparities/: README.md  scenario.yaml
examples/academic-research/gbif-species-range-shift/: README.md  scenario.yaml
examples/academic-research/netcdf-prophet-pipeline/: scenario.yaml
examples/academic-research/noaa-climate-trends/: README.md  scenario.yaml
examples/academic-research/openaq-pollution-spikes/: README.md  scenario.yaml
examples/academic-research/pdf-sentiment-pipeline/: scenario.yaml
examples/institutional-analytics/: README.md
examples/institutional-analytics/cohort-flow/: scenario.yaml
examples/institutional-analytics/course-eval-topics/: README.md  scenario.yaml
examples/institutional-analytics/dfwi-analysis/: scenario.yaml
kiro/: mcp.json
kiro/examples/claws/: discover-probe.md  (+3 more)
shared/: app.py  cdk.json  pyproject.toml
shared/lambdas/qs-discover/: handler.py
shared/stacks/: discover_stack.py  guardrail_stack.py  identity_stack.py
tests/integration/: conftest.py  test_claws_to_compute.py  test_claws_to_quicksight.py  test_data_to_compute.py
tests/scenarios/: README.md  conftest.py  runner.py  test_runner_unit.py  test_scenarios.py
workflows/: course-eval-themes.json  dataset-onboarding.json  donor-segmentation.json  grant-expenditure-audit.json  institutional-audit.json  research-pipeline.json  semester-retention.json
(+27 files in other folders)
