[project]
name = "quick-suite-capstone-integration"
version = "0.3.0"
description = "Cross-project integration tests for Quick Suite Capstone"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = ["boto3>=1.34"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pytest-substrate @ file:///Users/scttfrdmn/src/substrate/python",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: cross-project integration tests (require Substrate)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
